--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,7 @@ language: nl
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Slechte Tijden
 url: http://www.gutenberg.org/ebooks/50771
